fix(text-input): increase z-index of icon tooltip

--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -176,6 +176,7 @@
   .#{$prefix}--text-input__readonly-icon {
     @include tooltip--trigger('icon', 'bottom');
     @include tooltip--placement('icon', 'bottom', 'end');
+    z-index: z('floating') + 1;
     position: absolute;
     right: $carbon--spacing-05;
     cursor: default;
